--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <header>
-            <img src="images/logo3.png" alt="Dishonored logo" title="Dishonored logo" style="max-width:50%;margin:auto;display:block;">
+            <img src="logo3.png" alt="Dishonored logo" title="Dishonored logo" style="max-width:50%;margin:auto;display:block;">
 
             <nav>
                 <ul>
@@ -37,7 +37,7 @@
             <p>Dishonored has won numerous awards, including Game of the Year when it was released in 2012.</p>
 
             <div class="center">
-            <img src="images/d1.jpg" alt="Dishonored game cover" title="Dishonored game cover"/><img src="images/d2.jpg" alt="Dishonored 2 game cover" title="Dishonored 2 game cover"/><img src="images/doto.jpg" title="Death of the Outsider game cover" alt="Death of the Outsider game cover"/>
+            <img src="d1.jpg" alt="Dishonored game cover" title="Dishonored game cover"/><img src="d2.jpg" alt="Dishonored 2 game cover" title="Dishonored 2 game cover"/><img src="doto.jpg" title="Death of the Outsider game cover" alt="Death of the Outsider game cover"/>
             </div>
 
             <h1>Story</h1>
@@ -48,7 +48,7 @@
             <p>Corvo takes on the role of a feared and infamous assassin as he pursues members of the coup one by one - but whether he is out for justice or revenge is another question. Dishonored features multiple endings, which are dependent on Corvo's actions and player choice throughout the course of the game.</p>
 
             <div class="center">
-            <img src="images/Emily_Corvo_throne.png" alt="Corvo and Emily" title="Corvo and Emily" style="width:50%;"/>
+            <img src="Emily_Corvo_throne.png" alt="Corvo and Emily" title="Corvo and Emily" style="width:50%;"/>
             </div>
 
             <h1>Gameplay</h1>
@@ -61,7 +61,7 @@
             <p>This chaos system continues into the DLC as well as Dishonored 2. Death of the Outsider does not have the chaos system.</p>
 
             <div class="center">
-                <img src="images/blink.gif" alt="Corvo using Blink" title="Corvo using Blink" style="max-width:50%;"/>
+                <img src="blink.gif" alt="Corvo using Blink" title="Corvo using Blink" style="max-width:50%;"/>
             </div>
 
             <h1>Missions</h1>
