--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <header>
-            <img src="images/logo3.png" alt="Dishonored logo" title="Dishonored logo" style="max-width:50%;margin:auto;display:block;">
+            <img src="logo3.png" alt="Dishonored logo" title="Dishonored logo" style="max-width:50%;margin:auto;display:block;">
 
             <nav>
                 <ul>
